--- a/Task/01task.html
+++ b/Task/01task.html
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-    <!-- section 2  -->
+    <!-- section 1  -->
 
     <section>
         <div class="container mt-5 border border-5">
@@ -171,6 +171,24 @@
                 </div>
                 <div class="col-6">
                     <img src="../Images/bgimage.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- section 2  -->
+
+    <section>
+        <div class="container mt-5 border border-5">
+            <div class="row align-items-center text-center">
+                <div class="col-6">
+                    <img src="../Images/bgimage.jpg" alt="">
+                </div>
+                <div class="col-6">
+                    <h1>Hello</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ipsa voluptatibus
+                        debitis assumenda architecto? Consectetur voluptatum nulla praesentium sint!</p>
+                    <button type="button" class="btn btn-primary">Read More</button>
                 </div>
             </div>
         </div>
@@ -323,7 +341,6 @@
             <!--Grid column-->
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
               <h5 class="text-uppercase">Footer Content</h5>
-      
               <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
                 molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
