--- a/Task/01task.html
+++ b/Task/01task.html
@@ -19,6 +19,12 @@
         .w {
             text-align: center;
         }
+        .d{
+            color: crimson;
+        }
+        .y{
+            color: crimson;
+        }
     </style>
 </head>
 
@@ -53,7 +59,7 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../Practice/01home.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://web.whatsapp.com/">Link</a>
@@ -163,13 +169,13 @@
     <section>
         <div class="container mt-5 border border-5">
             <div class="row align-items-center text-center">
-                <div class="col-6">
-                    <h1>Hello</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ipsa voluptatibus
+                <div class="col">
+                    <h1 class="y">Hello</h1>
+                    <p class="d">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ipsa voluptatibus
                         debitis assumenda architecto? Consectetur voluptatum nulla praesentium sint!</p>
                     <button type="button" class="btn btn-primary">Read More</button>
                 </div>
-                <div class="col-6">
+                <div class="col">
                     <img src="../Images/bgimage.jpg" alt="">
                 </div>
             </div>
@@ -181,12 +187,12 @@
     <section>
         <div class="container mt-5 border border-5">
             <div class="row align-items-center text-center">
-                <div class="col-6">
+                <div class="col">
                     <img src="../Images/bgimage.jpg" alt="">
                 </div>
-                <div class="col-6">
-                    <h1>Hello</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ipsa voluptatibus
+                <div class="col">
+                    <h1 class="y">Hello</h1>
+                    <p class="d">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ipsa voluptatibus
                         debitis assumenda architecto? Consectetur voluptatum nulla praesentium sint!</p>
                     <button type="button" class="btn btn-primary">Read More</button>
                 </div>
