--- a/Task/01task.html
+++ b/Task/01task.html
@@ -200,6 +200,24 @@
         </div>
     </section>
 
+    <!-- section 3 -->
+
+    <section>
+        <div class="container mt-5 border border-5">
+            <div class="row align-items-center text-center">
+                <div class="col">
+                    <h1 class="y">Hello</h1>
+                    <p class="d">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ipsa voluptatibus
+                        debitis assumenda architecto? Consectetur voluptatum nulla praesentium sint!</p>
+                    <button type="button" class="btn btn-primary">Read More</button>
+                </div>
+                <div class="col">
+                    <img src="../Images/images1.jpeg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Accordion  -->
 
     <section class="accordion">
