--- a/Task/01task.html
+++ b/Task/01task.html
@@ -212,7 +212,7 @@
                     <button type="button" class="btn btn-primary">Read More</button>
                 </div>
                 <div class="col">
-                    <img src="../Images/images1.jpeg" alt="">
+                    <img src="../Images/bgimage.jpg" alt="">
                 </div>
             </div>
         </div>
